<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activity.SynchronizationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--<ImageView
            android:id="@+id/iv_logo"
            app:srcCompat="@mipmap/ic_launcher_foreground"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="-20dp"
            android:contentDescription="@string/TEXT_IMAGEVIEW" />-->

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:fabCustomSize="180dp"
            app:maxImageSize="175dp"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:layout_margin="25dp"
            app:srcCompat="@drawable/ic_notification"
            android:onClick="b_sync_Click"
            android:rotation="10"/>

        <View
            android:id="@+id/view_seperator"
            style="@style/Divider.Horizontal"
            android:layout_margin="30dp" />

        <!-- Ligne pour ToKeep -->
        <LinearLayout
            android:id="@+id/ll_tokeep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4.0dip"
            android:paddingTop="5.0dip"
            android:paddingRight="4.0dip"
            android:paddingBottom="1.0dip"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <TextView
                android:id="@+id/tv_tokeep_name"
                android:gravity="center"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:text="@string/TEXT_TV_TOKEEP_NAME"
                android:textColor="#FFF"/>

            <Button
                android:id="@+id/button_tokeep_value"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_marginEnd="20dp"
                android:layout_weight="0.3"
                android:background="#00FFFFFF"
                android:textColor="#FFF"
                android:clickable="false"
                android:text="@string/TEXT_TV_VALUE_DEFAULT" />

            <Button
                android:id="@+id/b_tokeep_look"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:text="@string/TEXT_BT_LOOK"
                android:onClick="b_tokeep_look_Click"/>


        </LinearLayout>

        <!-- Ligne pour ToDelete -->
        <LinearLayout
            android:id="@+id/ll_todelete"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4.0dip"
            android:paddingTop="5.0dip"
            android:paddingRight="4.0dip"
            android:paddingBottom="1.0dip"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <TextView
                android:id="@+id/tv_todelete_name"
                android:gravity="center"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:textColor="#FFF"
                android:text="@string/TEXT_TV_TODELETE_NAME" />

            <Button
                android:id="@+id/button_todelete_value"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_marginEnd="20dp"
                android:layout_weight="0.3"
                android:background="#00FFFFFF"
                android:textColor="#FFF"
                android:clickable="false"
                android:text="@string/TEXT_TV_VALUE_DEFAULT" />

            <Button
                android:id="@+id/b_todelete_look"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:text="@string/TEXT_BT_LOOK"
                android:onClick="b_todelete_look_Click" />


        </LinearLayout>

        <!-- Ligne pour ToDownload -->
        <LinearLayout
            android:id="@+id/ll_todownload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4.0dip"
            android:paddingTop="5.0dip"
            android:paddingRight="4.0dip"
            android:paddingBottom="1.0dip"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <TextView
                android:id="@+id/tv_todownload_name"
                android:gravity="center"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:textColor="#FFF"
                android:text="@string/TEXT_TV_TODOWNLOAD_NAME" />

            <Button
                android:id="@+id/button_todownload_value"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_marginEnd="20dp"
                android:layout_weight="0.3"
                android:background="#00FFFFFF"
                android:clickable="false"
                android:textColor="#FFF"
                android:text="@string/TEXT_TV_VALUE_DEFAULT" />

            <Button
                android:id="@+id/b_todownload_look"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:text="@string/TEXT_BT_LOOK"
                android:onClick="b_todownload_look_Click"/>
        </LinearLayout>

        <Button
            android:id="@+id/b_download"
            android:text="@string/BUTTON_DOWNLOAD"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:onClick="b_download_Click" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>